--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb",
   "rules": {
     "no-console": 0,
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "arrow-body-style": 0
     }
 }
