--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,9 @@
     "no-console": 0,
     "comma-dangle": 0,
     "arrow-body-style": 0
-    }
+  },
+  "env": {
+    "node": true,
+    "mocha": true
+  }
 }
