--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "pg-promise": "^5.5.0"
   },
