Allow certain words to shadow scope

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "rules": {
     "no-console": 0,
     "comma-dangle": 0,
-    "arrow-body-style": 0
+    "arrow-body-style": 0,
+    "no-shadow": [ "error", { "allow": ["error", "err", "done", "resolve", "reject"] }]
   },
   "env": {
     "node": true,
