--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Api server for Tunebay",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon --exec 'mocha --recursive -R min'",
+    "test": "nodemon --exec 'mocha --recursive'",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -21,7 +21,9 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "express": "^4.14.0",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "pg-promise": "^5.5.0"
