--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Api server for Tunebay",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon --exec 'mocha --recursive'",
+    "test": "NODE_ENV=test nodemon --exec 'mocha --recursive'",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -26,7 +26,8 @@
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
-    "pg-promise": "^5.5.0"
+    "pg-promise": "^5.5.0",
+    "supertest": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^3.12.2",
