--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "express": "^4.14.0",
+    "jwt-simple": "^0.5.1",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
