--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "pg-promise": "^5.5.0",
     "supertest": "^2.0.1"
   },
