--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "pg-promise": "^5.5.0",
     "supertest": "^2.0.1"
   },
