Enable cors to allow access from 8080

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.1",
     "mocha": "^3.2.0",
