--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tunebay/server#readme",
   "dependencies": {
+    "aws-sdk": "^2.9.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
@@ -28,6 +29,7 @@
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
