--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chai": "^3.5.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "jwt-simple": "^0.5.1",
+    "jsonwebtoken": "^7.3.0",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
