--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.3.0",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
