--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "pg-promise": "^5.5.0",
