--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.3.0",
+    "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
@@ -34,6 +35,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "pg": "^6.2.2",
     "pg-promise": "^5.5.0",
     "supertest": "^2.0.1"
   },
