--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^3.5.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^7.3.0",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
