--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "bookshelf": "^0.10.3",
     "chai": "^3.5.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
